# serve

./: Cargo.toml  Config.toml.example
src/: main.rs
src/authorize/: mod.rs
src/authorize/middleware/: error.rs  mod.rs
src/authorize/user_tokens/: child.rs  mod.rs  parent.rs
src/config/: mod.rs
src/middlewares/: cors.rs
src/post_prepare/: exec_irt.rs  mod.rs
src/router/: mod.rs
src/serves/: mod.rs
src/serves/children/: mod.rs
src/serves/children/manage/: controller.rs  error.rs  input_models.rs  mod.rs
src/serves/children/quiz/: controller.rs  error.rs  input_models.rs  mod.rs  output_models.rs
src/serves/children/social/: mod.rs
src/serves/children/social/check_in/: controller.rs  error.rs  input_model.rs  mod.rs  output_model.rs
src/serves/children/social/rank/: controller.rs  error.rs  mod.rs
src/serves/children/social/score/: controller.rs  error.rs  mod.rs  output_models.rs
src/serves/parent/: mod.rs
src/serves/parent/child_manage/: controller.rs  error.rs  input_models.rs  mod.rs  output_models.rs
src/serves/parent/parent_auth/: controller.rs  error.rs  input_models.rs  mod.rs
src/starter/: mod.rs  state_to_extension.rs
