[package]
name = "main-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.4" }
axum-macros = "0.4.1"
axum-resp-result = { version = "0.7.1", features = ["log"] }
axum-starter = { version = "0.10.0", features = ["logger"] }
chrono = { version = "0.4.35", features = ["serde"] }
figment = { version = "0.10.14", features = ["toml"] }
http = "1.0.0"
jsonwebtoken = "9.2.0"
level-evaluate = { version = "0.1.0", path = "../level-evaluate" }
log = "0.4.20"
password-hash = { version = "0.5.0", features = ["std"] }
persistence = { version = "0.1.0", path = "../presistence", package = "presistence" }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
simple_logger = "4.3.3"
static_assertions = "1.1.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "auth", "catch-panic", "cors"] }
typed-builder = "0.18.1"
url = "2.5.0"
